<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout_main"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <ExpandableListView
        android:id="@+id/listV_main"
        android:layout_width="fill_parent"
        android:layout_height="386dp"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/btnAdd"
        android:layout_marginTop="17dp"
        android:childDivider="#1CD1FF"
        android:divider="#1CD1FF"
        android:dividerHeight="1.3sp"
        android:groupIndicator="@null" />

    <ImageView
        android:id="@+id/no_tasks_image"
        android:layout_width="168dp"
        android:layout_height="188dp"
        android:layout_centerInParent="true"
        android:contentDescription="@string/no_tasks_alert"
        android:gravity="top"
        android:src="@drawable/no_tasks_new" />

    <LinearLayout
        android:id="@+id/undobar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginBottom="20dp"
        android:alpha="100"
        android:background="#808080"
        android:dividerPadding="11dp"
        android:padding="4dp"
        android:visibility="gone" >

        <TextView
            android:id="@+id/undobar_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/deleted"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#fff" />

        <Button
            android:id="@+id/undobar_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:background="#808080"
            android:drawableLeft="@drawable/undo"
            android:onClick="undoTaskDeletion"
            android:text="@string/undo"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#fff" />
    </LinearLayout>

    <ImageView
        android:id="@+id/footer"
        android:layout_width="match_parent"
        android:layout_height="100dip"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:contentDescription="@string/footer"
        android:scaleType="fitXY"
        android:src="@drawable/footer" />

    <EditText
        android:id="@+id/edit_message"
        android:layout_width="183dp"
        android:layout_height="60dp"
        android:layout_alignParentTop="true"
        android:layout_alignRight="@+id/no_tasks_image"
        android:layout_marginRight="16dp"
        android:background="@null"
        android:ellipsize="end"
        android:ems="10"
        android:enabled="true"
        android:hint="@string/enter_task_title"
        android:padding="1dp"
        android:scrollHorizontally="false"
        android:singleLine="true"
        android:textColor="#707070"
        android:textColorHint="#D0D0D0"
        android:textSize="22sp"
        android:textStyle="italic" >

        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/btnAdd"
        android:layout_width="44dp"
        android:layout_height="51dp"
        android:layout_alignBottom="@+id/edit_message"
        android:layout_toRightOf="@+id/edit_message"
        android:background="@null"
        android:focusable="true"
        android:gravity="top"
        android:text="Add" />

</RelativeLayout>